[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repohound"
version = "0.3.0"
description = "Search GitHub repos by keyword — auto-scans for malware, viruses, and token stealers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Renzy Armstrong", email = "Renzyvizloten@gmail.com"}
]
keywords = ["security", "github", "malware", "scanner", "token-scanner", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Code Search",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/RenzyArmstrong/repohound"
Repository = "https://github.com/RenzyArmstrong/repohound"
Issues = "https://github.com/RenzyArmstrong/repohound/issues"

[project.scripts]
repohound = "repohound.cli:main"

[tool.setuptools.packages.find]
include = ["repohound*"]
